--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       property="og:description"
     />
     <meta content="website" property="og:type" />
-    <meta content="./data/icon.png" property="og:image" />
+    <meta content="./data/banner.png" property="og:image" />
     <meta content="velsreis.tk" property="og:site_name" />
 
     <meta
