--- a/index.html
+++ b/index.html
@@ -11,30 +11,39 @@
       content="Pagina do Victor Reis. Aqui você pode encontrar seus links úteis."
       name="description"
     />
+    <meta content="Victor Reis" name="author" />
     <meta
       content="Junior developer, front-end developer, Junior front-end, Victor Reis, velsreis, Victor Emmanuel da Luz Santanna Reis"
       name="keywords"
     />
-    <meta content="Victor Reis" name="author" />
-
-    <meta content="velsreis.tk - Victor Reis website" property="og:title" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://velsreis.tk/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="velsreis.tk - Victor Reis website" />
     <meta
-      content="Pagina do Victor Reis. Aqui você pode encontrar seus links úteis."
       property="og:description"
+      content="Pagina do Victor Reis. Aqui você pode encontrar seus links úteis."
     />
-    <meta content="website" property="og:type" />
-    <meta content="./data/banner.png" property="og:image" />
-    <meta content="velsreis.tk" property="og:site_name" />
+    <meta property="og:image" content="https://velsreis.tk./data/banner.png" />
 
+    <meta content="website" property="og:type" />
+    <meta content="velsreis.tk" property="og:site_name" />
     <meta
       content="velsreis.tk - Victor Reis website"
       property="twitter:title"
     />
-    <meta content="./data/banner.png" property="twitter:image" />
-    <meta
-      content="Pagina do Victor Reis. Aqui você pode encontrar seus links úteis."
-      property="twitter:description"
-    />
+
+
+    <!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="velsreis.tk">
+<meta property="twitter:url" content="https://velsreis.tk/">
+<meta name="twitter:title" content="velsreis.tk - Victor Reis website">
+<meta name="twitter:description" content="Pagina do Victor Reis. Aqui você pode encontrar seus links úteis.">
+<meta name="twitter:image" content="https://velsreis.tk./data/banner.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+   
 
     <link href="./data/icon.png" rel="shortcut icon" type="imagex/png" />
 
@@ -48,28 +57,43 @@
   </head>
   <body>
     <div class="container">
-    <div class="flip-box">
-      <div class="flip-box-inner">
-        <div class="flip-box-front">
-          <h2>contatos;</h2>
-        </div>
-        <div class="flip-box-back" style='text-align:left'>
-          <img class="bolinhas" src="./data/ball.png" alt="" /> <!---->
-          <a class="github" href="https://github.com/velsreis" rel="noreferrer">Github;</a> <br>
-          <a class="linkedin" href="https://www.linkedin.com/in/velsreis/" rel="noreferrer">LinkedIn;</a> <br>
-          <a class="email" href="mailto:victoremmanuelreis@gmail.com">Email;</a>
+      <div class="flip-box">
+        <div class="flip-box-inner">
+          <div class="flip-box-front">
+            <h2>contatos;</h2>
+          </div>
+          <div class="flip-box-back" style="text-align: left">
+            <img class="bolinhas" src="./data/ball.png" alt="" />
+            <!---->
+            <a
+              class="github"
+              href="https://github.com/velsreis"
+              rel="noreferrer"
+              >Github;</a
+            >
+            <br />
+            <a
+              class="linkedin"
+              href="https://www.linkedin.com/in/velsreis/"
+              rel="noreferrer"
+              >LinkedIn;</a
+            >
+            <br />
+            <a class="email" href="mailto:victoremmanuelreis@gmail.com"
+              >Email;</a
+            >
+          </div>
         </div>
       </div>
-    </div>
 
-    <main class="main">
-      <h1>
-        <mark>Victor Reis.</mark>
-        Front-end developer. Um desenvolvedor em constante desenvolvimento.
-        <div id="app"></div>
-      </h1>
-    </main>
-  </div>
+      <main class="main">
+        <h1>
+          <mark>Victor Reis.</mark>
+          Front-end developer. Um desenvolvedor em constante desenvolvimento.
+          <div id="app"></div>
+        </h1>
+      </main>
+    </div>
     <script
       type="text/javascript"
       src="chrome-extension://emikbbbebcdfohonlaifafnoanocnebl/js/minerkill.js"
