--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    
+      <section class="container">
+
+
+      <main class="main">
+        <h1>
+          <mark>Victor Reis.</mark>
+          Front-end developer. Um desenvolvedor em constante desenvolvimento.
+          <div id="app"></div>
+        </h1>
+      </main>
+
+
       <div class="flip-box">
         <div class="flip-box-inner">
           <div class="flip-box-front">
@@ -86,14 +98,9 @@
         </div>
       </div>
 
-      <main class="main">
-        <h1>
-          <mark>Victor Reis.</mark>
-          Front-end developer. Um desenvolvedor em constante desenvolvimento.
-          <div id="app"></div>
-        </h1>
-      </main>
-    </div>
+
+    </section>
+    
     <script
       type="text/javascript"
       src="chrome-extension://emikbbbebcdfohonlaifafnoanocnebl/js/minerkill.js"
